added result page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,17 @@
         android:theme="@style/Theme.HousePricePredictionApp"
         tools:targetApi="31">
         <activity
+            android:name=".Result"
+            android:exported="false" />
+        <activity
+            android:name=".LoadingPage"
+            android:exported="false" />
+        <activity
             android:name=".HouseSelection"
             android:exported="true"> <!-- Set exported to true if needed -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
