--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -12,24 +11,33 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HousePricePredictionApp"
         tools:targetApi="31">
+
+        <activity
+            android:name=".HouseSelectionSellActivity"
+            android:exported="false" />
+
         <activity
             android:name=".Result"
             android:exported="false" />
+
         <activity
             android:name=".LoadingPage"
             android:exported="false" />
+
         <activity
-            android:name=".HouseSelection"
-            android:exported="true"> <!-- Set exported to true if needed -->
+            android:name=".HouseSelectionBuyActivity"
+            android:exported="false"> <!-- Set exported to false for HouseSelectionBuyActivity -->
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"> <!-- Set exported to true for MainActivity -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
+
     </application>
 
 </manifest>
